Minor change: parallax image

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <li data-transition="random-static" data-slotamount="7" data-masterspeed="1000" data-saveperformance="on">
                         <img src="images/slides/pemic-slide-1.jpg" alt="pemic consulting slider-image" />
                         <div class="tp-caption sfl title-slide center" data-x="30" data-y="147" data-speed="1000" data-start="1000" data-easing="Power3.easeInOut">
-                            3D Design &amp; Architectural<br><span>Concepts</span>
+                          Architectural Design <br><span>&amp; 3D</span>
                         </div>
                         <div class="tp-caption sfr desc-slide center" data-x="30" data-y="249" data-speed="1000" data-start="1500" data-easing="Power3.easeInOut">
                             We create unique designs in a variety of styles for every room in<br>your house home decorators collection.
@@ -232,7 +232,7 @@
                     <li data-transition="random-static" data-slotamount="7" data-masterspeed="1000" data-saveperformance="on">
                         <img src="images/slides/pemic-slide-2.jpg" alt="pemic consulting slider-image" />
                         <div class="tp-caption sfl title-slide center" data-x="30" data-y="147" data-speed="1000" data-start="1000" data-easing="Power3.easeInOut">
-                            Interior Design<span> &amp; Concepts</span>
+                            Concepts &amp; <span>Interior Design</span>
                         </div>
                         <div class="tp-caption sfr desc-slide center" data-x="30" data-y="209" data-speed="1000" data-start="1500" data-easing="Power3.easeInOut">
                             Pe-Mic Consulting's design solutions is based on a functional,<br> and satisfactory space for the productivity
