--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
     <meta name="copyright" content="pemicconsulting.com all rights reserved.">
     <meta name="language" content="en">
 
+    <!-- Facebook and Twitter integration -->
+  	<meta property="og:title" content=""/>
+  	<meta property="og:image" content=""/>
+  	<meta property="og:url" content=""/>
+  	<meta property="og:site_name" content=""/>
+  	<meta property="og:description" content=""/>
+  	<meta name="twitter:title" content="" />
+  	<meta name="twitter:image" content="" />
+  	<meta name="twitter:url" content="" />
+  	<meta name="twitter:card" content="" />
+
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -55,7 +66,6 @@
                     <div class="col-md-6">
                         <div class="flat-address">
                             <ul>
-                                <li class="address">No 4, Yakubu Street, off Jimoh Balogun Str., Ketu Ikosi, Lagos, Nigeria</li>
                             </ul>
                         </div><!-- /.flat-address -->
                     </div><!-- /.col-md-6 -->
@@ -66,11 +76,8 @@
                                 <li class="service"><a href="#">Services</a>
                                     <ul>
                                         <li><a href="services-architectural-planning.html">Architectural Design</a></li>
-                                        <!-- <li><a href="services-decoration-furniture.html">Decoration &amp; Furniture</a></li> -->
                                         <li><a href="services-interior-design.html">Interior Design</a></li>
                                         <li><a href="services-landscape-design.html">Construction</a></li>
-                                        <!-- <li><a href="services-sustainable-design.html">Sustainable Design</a></li> -->
-                                        <!-- <li><a href="services-urban-design.html">Urban Design</a></li> -->
                                     </ul>
                                 </li>
                                 <li><a href="#">Contact</a></li>
@@ -125,79 +132,58 @@
                                               <img src="images/pemic-logo.jpg" alt="pemic logo image">
                                             </a>
                                         </li>
-                                        <li><a href="about.html">About</a></li>
+                                        <li class="has-children"><a href="about.html">About</a>
+                                          <ul class="submenu">
+                                            <li><a href="meet-the-team.html">Our Team</a></li>
+                                            <li><a href="gallery-grid.html">Certificates</a></li>
+                                          </ul>
+                                        </li>
                                         <li class="has-children"><a href="services.html">Services</a>
                                             <ul class="submenu">
-                                                <li><a href="services-architectural-planning.html">Architectural Planning</a>
-                                                </li>
-                                                <li><a href="services-decoration-furniture.html">Decoration &amp; Furniture</a>
-                                                </li>
-                                                <li><a href="services-interior-design.html">Interior Design</a>
-                                                </li>
-                                                <li><a href="services-landscape-design.html">Landscape Design</a>
-                                                </li>
-                                                <li><a href="services-sustainable-design.html">Sustainable Design</a></li>
-                                                <li><a href="services-urban-design.html">Urban Design</a></li>
+                                              <li><a href="services-architectural-planning.html">Architectural Design</a></li>
+                                              <li><a href="services-interior-design.html">Interior Design</a></li>
+                                              <li><a href="services-landscape-design.html">Construction</a></li>
                                             </ul><!-- /.submenu -->
                                         </li>
-                                        <li class="has-mega-menu has-children"><a href="#">Projects</a>
+                                        <li class="has-mega-menu has-children"><a href="projects-grid-simple.html">Projects</a>
+                                          <!--projects-grid-simple.html is for whole list of projects -->
                                             <div class="sub-menu mega-menu three-colums">
                                                 <div class="menu-item">
-                                                    <a href="#">Project Layouts</a>
+                                                    <a href="#">Architecture</a>
                                                     <ul>
-                                                        <li><a href="projects-grid-simple.html">Grid Simple 2 3 4 5 Columns</a></li>
-                                                        <li><a href="projects-grid-alt.html">Grid Alt 2 3 4 5 Columns</a></li>
-                                                        <li><a href="projects-grid-masonry.html">Grid Masonry 2 3 4 5 Columns</a></li>
+                                                        <li><a href="#">RCCG Magodo</a></li>
+                                                        <li><a href="#">RCCG Magodo</a></li>
+                                                        <li><a href="#">RCCG Magodo</a></li>
                                                     </ul>
                                                 </div>
 
                                                 <div class="menu-item">
-                                                    <a href="#">Gallery Styles</a>
+                                                    <a href="#">Architecture</a>
                                                     <ul>
-                                                        <li><a href="gallery-list.html">Gallery Type List</a></li>
-                                                        <li><a href="gallery-slider.html">Gallery Type Slider</a></li>
                                                         <li><a href="gallery-grid.html">Gallery Type Grid</a></li>
+                                                        <!-- gallery-grid.html for individual projects -->
+                                                        <li><a href="#">RCCG Magodo</a></li>
+                                                        <li><a href="#">RCCG Magodo</a></li>
+                                                        <li><a href="#">RCCG Magodo</a></li>
                                                     </ul>
                                                 </div>
 
                                                 <div class="menu-item">
-                                                    <a href="#">Content Positions</a>
-                                                    <ul>
-                                                        <li><a href="gallery-position-left.html">Position Left</a></li>
-                                                        <li><a href="gallery-position-right.html">Position Right</a></li>
-                                                        <li><a href="gallery-position-fullwidth.html">Position Fullwidth</a></li>
-                                                    </ul>
+                                                  <a href="#">Architecture</a>
+                                                  <ul>
+                                                      <li><a href="#">RCCG Magodo</a></li>
+                                                      <li><a href="#">RCCG Magodo</a></li>
+                                                      <li><a href="#">RCCG Magodo</a></li>
+                                                  </ul>
                                                 </div>
                                             </div><!-- /.mega-menu -->
                                         </li>
                                         <!-- <li><a href="blog.html">Blog</a></li> -->
                                         <li><a href="contact.html">Contact </a></li>
-                                        <li class="has-mega-menu has-children"><a href="#">Extra</a>
-                                            <div class="sub-menu mega-menu two-columns">
-                                                <div class="menu-item">
-                                                    <a href="#">Bonus Pages</a>
-                                                    <ul>
-                                                        <li><a href="one-page.html">One Page Demo </a></li>
-                                                        <li><a href="faq.html">FAQ</a></li>
-                                                        <li><a href="meet-the-team.html">Meet the Team</a></li>
-                                                        <li><a href="blog-grid.html">Post Grid</a></li>
-                                                        <li><a href="projects-fullwidth.html">Project full width</a></li>
-                                                        <li><a href="pricing-table.html">Pricing Table</a></li>
-                                                        <li><a href="testimonials.html">Testimonials</a></li>
-                                                    </ul>
-                                                </div>
-
-                                                <div class="menu-item">
-                                                    <a href="#">Special Pages</a>
-                                                    <ul>
-                                                        <li><a href="404.html">404 Page</a></li>
-                                                        <li><a href="search-results.html">Search Results</a></li>
-                                                        <li><a href="projects-sidebar-left.html">Sidebar Left</a></li>
-                                                        <li><a href="projects-sidebar-right.html">Sidebar Right</a></li>
-                                                        <li><a href="no-sidebar.html">No Sidebar</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div><!-- /.mega-menu -->
+                                        <li class="has-children"><a href="#">Extra</a>
+                                            <ul class="submenu">
+                                                <li><a href="404.html">404 Page</a></li>
+                                            </ul>
                                         </li>
                                     </ul><!-- /.menu -->
 
@@ -788,7 +774,7 @@
 
                     <div class="col-md-8">
                         <div class="subscrbe-form">
-                            <p><strong>Pe&dash;Mic Consulting</strong> is an Architectural firm located in Lagos, Nigeria that is passionate about completing your incomplete world by through unique architectural design.</p>
+                            <p><strong>Pe-Mic Consulting</strong> is an Architectural firm located in Lagos, Nigeria that is passionate about completing your incomplete world by through unique architectural design.</p>
                         </div><!-- /.widget_search -->
                     </div><!-- /.col-md-8 -->
                 </div><!-- /.row -->
@@ -887,7 +873,6 @@
     <script type="text/javascript" src="javascript/jquery.magnific-popup.min.js"></script>
     <script type="text/javascript" src="javascript/parallax.js"></script>
     <script type="text/javascript" src="javascript/jquery.countdown.js"></script>
-    <!-- <script type="text/javascript" src="javascript/switcher.js"></script> -->
     <script type="text/javascript" src="javascript/jquery.sticky.js"></script>
     <script type="text/javascript" src="javascript/smoothscroll.js"></script>
     <script type="text/javascript" src="javascript/main.js"></script>
