Service page design

--- a/about.html
+++ b/about.html
@@ -488,11 +488,11 @@
                             <div class="widget widget_nav_menu">
                                 <h3 class="widget-title">Services</h3>
                                 <div class="menu-services-container">
-                                    <ul class="menu">
-                                        <li class="menu-item"><a href="#">Architectural Design</a></li>
-                                        <li class="menu-item"><a href="#">Construction</a></li>
-                                        <li class="menu-item"><a href="#">Interior Design</a></li>
-                                    </ul>
+                                  <ul class="menu">
+                                      <li class="menu-item"><a href="services-architectural-planning.html">Architectural Design</a></li>
+                                      <li class="menu-item"><a href="services-landscape-design.html">Construction</a></li>
+                                      <li class="menu-item"><a href="services-interior-design.html">Interior Design</a></li>
+                                  </ul>
                                 </div>
                             </div><!-- /.widget_nav_menu -->
                         </div><!-- /.col-md-3 -->
