--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                                     <a href="services-architectural-planning.html"><img src="images/imagebox/pemic-archi.jpg" alt="pemic-archi-design images"></a>
                                 </div>
                                 <div class="box-content">
-                                    <p class="box-desc">Our professional architectural system is designed to cater our client’s need in order to achieve their requirement based on their budget why delivery timeless designs</p>
+                                    <p class="box-desc">Our professional architectural system is designed to cater our client’s need in order to achieve their requirement based on their budget why delivery timeless designs.</p>
                                 </div>
                             </div>
                         </div>
@@ -799,11 +799,11 @@
                             <div class="widget widget_nav_menu">
                                 <h3 class="widget-title">Services</h3>
                                 <div class="menu-services-container">
-                                    <ul class="menu">
-                                        <li class="menu-item"><a href="#">Architectural Design</a></li>
-                                        <li class="menu-item"><a href="#">Construction</a></li>
-                                        <li class="menu-item"><a href="#">Interior Design</a></li>
-                                    </ul>
+                                  <ul class="menu">
+                                      <li class="menu-item"><a href="services-architectural-planning.html">Architectural Design</a></li>
+                                      <li class="menu-item"><a href="services-landscape-design.html">Construction</a></li>
+                                      <li class="menu-item"><a href="services-interior-design.html">Interior Design</a></li>
+                                  </ul>
                                 </div>
                             </div><!-- /.widget_nav_menu -->
                         </div><!-- /.col-md-3 -->
@@ -883,5 +883,4 @@
     <script type="text/javascript" src="javascript/slider.js"></script>
 </body>
 
-<!-- Mirrored from themesflat.com/html/hnk/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 28 Jun 2017 13:57:58 GMT -->
 </html>
