Minor changes: edit text etc

--- a/about.html
+++ b/about.html
@@ -258,7 +258,7 @@
 
                         <div class="row">
                             <div class="col-md-3">
-                                <h4 class="title style1">M. V &amp; V</h4>
+                                <!-- <h4 class="title style1">M. V &amp; V</h4> -->
                             </div><!-- /.col-md-3 -->
 
                             <div class="col-md-9">
@@ -331,29 +331,6 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <div class="row">
-                            <div class="col-md-3">
-                                <h4 class="title style2">Affiliations</h4>
-                            </div><!-- /.col-md-3 -->
-
-                            <div class="col-md-9">
-                                <p class="content"><b>We are registered with NIA. </b>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                            </div><!-- /.col-md-9 -->
-                        </div><!-- /.row -->
-
-                        <div class="flat-divider d50px"></div>
-
-                        <div class="row">
-                            <div class="col-md-3">
-                                <h4 class="title style3">Partners</h4>
-                            </div><!-- /.col-md-3 -->
-
-                            <div class="col-md-9">
-                                <p class="content"><img src="images/about/pn.jpg" alt="images"></p>
-                            </div><!-- /.col-md-9 -->
-                        </div><!-- /.row -->
-
-                        <div class="flat-divider d50px"></div>
 
                         <div class="row">
                             <div class="col-md-3">
@@ -363,7 +340,7 @@
                             <div class="col-md-9">
                                 <div class="contents">
                                     <p class="content"><strong>No 4, Yakubu Street, off Jimoh Balogun Str., Ketu Ikosi, Lagos, Nigeria</strong></p>
-                                    <p><a href="mailto:ademolababalola0909@yahoo.com">ademolababalola0909@yahoo.com</a><br>+234806 259 1996</p>
+                                    <p><a href="mailto:pemicconsulting@gmail.com">pemicconsulting@gmail.com</a><br>+234806 259 1996 <br>+234805 766 7909</p>
                                 </div>
                             </div><!-- /.col-md-9 -->
                         </div><!-- /.row -->
@@ -382,7 +359,6 @@
                                 <div class="member-info">
                                     <h3 class="member-name">Idehn Ailele</h3>
                                     <p class="member-subtitle">Architect</p>
-                                    <p class="member-desc">Lorem Ipsum has been the industry’s standard dummy text ever since the 1500.</p>
                                     <div class="social-links">
                                         <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
                                         <a href="#" data-title="Twitter" class="twitter"><i class="fa fa-twitter"></i></a>
@@ -398,7 +374,6 @@
                                 <div class="member-info">
                                     <h3 class="member-name">Ogunseye Seun</h3>
                                     <p class="member-subtitle">Structural Engineer</p>
-                                    <p class="member-desc">Lorem Ipsum has been the industry’s standard dummy text ever since the 1500.</p>
                                     <div class="social-links">
                                         <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
                                         <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
@@ -415,7 +390,6 @@
                                 <div class="member-info">
                                     <h3 class="member-name">Ugheoke Stephen</h3>
                                     <p class="member-subtitle">Quantity Surveyor</p>
-                                    <p class="member-desc">Lorem Ipsum has been the industry’s standard dummy text ever since the 1500.</p>
                                     <div class="social-links">
                                         <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
                                         <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
@@ -432,7 +406,6 @@
                                 <div class="member-info">
                                     <h3 class="member-name">Sofola Olugbenga</h3>
                                     <p class="member-subtitle">Electrical Engineer</p>
-                                    <p class="member-desc">Lorem Ipsum has been the industry’s standard dummy text ever since the 1500.</p>
                                     <div class="social-links">
                                         <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
                                         <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
@@ -463,7 +436,7 @@
 
                   <div class="col-md-8">
                       <div class="subscrbe-form">
-                          <p><strong>Pe-Mic Consulting</strong> is an Architectural firm located in Lagos, Nigeria that is passionate about completing your incomplete world by through unique architectural design.</p>
+                          <p><strong>Pe-Mic Consulting</strong> ...Completing your incomplete world by our architectural design.</p>
                       </div><!-- /.widget_search -->
                   </div><!-- /.col-md-8 -->
               </div><!-- /.row -->
@@ -504,8 +477,8 @@
                               <p><strong>No 4, Yakubu Street, off Jimoh Balogun Str., Ketu Ikosi, Lagos, Nigeria</strong></p>
                               <p>
                                 <strong>Mobile 1: </strong>+234806 259 1996<br>
-                                <!-- <strong>Mobile 2:</strong>+234805 766 7909<br> -->
-                                <strong>E-mail: </strong><a href="mailto:ademolababalola0909@yahoo.com ">ademolababalola0909@yahoo.com </a>
+                                <strong>Mobile 2:</strong>+234805 766 7909<br>
+                                <strong>E-mail: </strong><a href="mailto:pemicconsulting@gmail.com ">pemicconsulting@gmail.com </a>
                               </p>
                             </div>
                           </div><!-- /.widget_text -->
