--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                             <div class="box-services-wrap">
                                 <h2 class="title-box-services">We are <strong>Professional</strong> &amp; <strong>Technical</strong> </h2>
                                 <p>Pe-Mic Consulting strive to provide excellent services to satisfy
-                                  the challenging need of our clients in architectural and interior design services, construction works. We aspire to deliver high quality services.</p>
+                                  the challenging need of our clients in architectural design services and construction works. We aspire to deliver high quality services to client specifications.</p>
                             </div>
                         </div>
                     </div><!-- /.item -->
@@ -262,7 +262,7 @@
                                     <a href="services-architectural-planning.html"><img src="images/imagebox/pemic-archi.jpg" alt="pemic-archi-design images"></a>
                                 </div>
                                 <div class="box-content">
-                                    <p class="box-desc">Our professional architectural system is designed to cater our client’s need in order to achieve their requirement based on their budget why delivery timeless designs.</p>
+                                    <p class="box-desc">Our professional architectural system is designed to cater for our client’s need in order to achieve their requirement based on their budget and delivery timelines.</p>
                                 </div>
                             </div>
                         </div>
@@ -294,7 +294,7 @@
                                     <a href="services-landscape-design.html"><img src="images/imagebox/pemic-construction.jpg" alt="images"></a>
                                 </div>
                                 <div class="box-content">
-                                    <p class="box-desc">Pe-Mic Consulting ensures that industrial standards and requirements are met. We also best practices are employed in safety and build environments for our workers too</p>
+                                    <p class="box-desc">Pe-Mic Consulting ensures that industrial standards and requirements are met. Also, we consider safety environment for our construction sites with well experienced professionals. </p>
                                 </div>
                             </div>
                         </div>
@@ -500,7 +500,7 @@
                 <div class="row">
                     <div class="title-section">
                         <h2 class="title">Why choose us?</h2>
-                        <p>Our superb finishes which is a result of our exposure and good understanding <br>of necessary equipment to use for client satisfaction.</p>
+                        <p>Space management for superb finishes is a result of our exposure and good understanding <br>of client brief to guarantee client satisfaction with  the use of necessary equipment.</p>
                     </div><!-- /.title-section -->
                 </div><!-- /.row -->
 
@@ -535,10 +535,10 @@
                             <div class="iconbox ">
                                 <div class="box-header">
                                     <div class="box-icon"><i class="fa icons icon-trophy"></i></div>
-                                    <h5 class="box-title">Honest &amp; Dependable</h5>
+                                    <h5 class="box-title">Honest &amp; Accountable</h5>
                                 </div>
                                 <p class="box-content">
-                                    Lorem Ipsum is simply dummy text of the printing.
+                                  We believe accountability is key.
                                 </p>
                             </div>
                         </div><!-- /.item -->
@@ -574,7 +574,7 @@
                                     <h5 class="box-title">Professional</h5>
                                 </div>
                                 <p class="box-content">
-                                    Pe-Mic Team is led by a highly educated architect
+                                    Pe-Mic Team is led by a highly experienced architect.
                                 </p>
                             </div>
                         </div><!-- /.item -->
@@ -685,80 +685,6 @@
             </div><!-- /.container -->
         </section>
 
-        <section class="flat-row pad-bottom100px">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="main-text">
-                            <h3 class="title">We look to our differences to bring a richness of perspective.</h3>
-                            <p>Our team takes over everything, from an idea and concept development to realization. We believe in traditions and incorporate them within our innovations. All our projects incorporate a unique artistic image and functional solutions. Client is the soul of the project.</p>
-                        </div>
-
-                        <div class="flat-divider d50px"></div>
-
-                        <div class="flat-counter">
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <div class="counter">
-                                        <div class="counter-image"><i class="fa icons icon-layers"></i></div>
-                                        <div class="numb-count" data-to="332013" data-speed="3000" data-waypoint-active="yes">332013</div>
-                                        <div class="counter-title">
-                                            <strong>Projects</strong> completed on time and on budget with a high level of customer satisfaction.
-                                        </div>
-                                    </div>
-                                </div><!-- /.col-md-4 -->
-                                <div class="col-md-4">
-                                    <div class="counter">
-                                        <div class="counter-image"><i class="fa icons icon-clock"></i></div>
-                                        <div class="numb-count" data-to="7121988" data-speed="3000" data-waypoint-active="yes">7121988</div>
-                                        <div class="counter-title">
-                                            <strong>Working Hours</strong> with enthusiasm and passion to deliver outstanding service.
-                                        </div>
-                                    </div>
-                                </div><!-- /.col-md-4 -->
-                                <div class="col-md-4">
-                                    <div class="counter">
-                                        <div class="counter-image"><i class="fa icons icon-people"></i></div>
-                                        <div class="numb-count" data-to="6101990" data-speed="3000" data-waypoint-active="yes">6101990</div>
-                                        <div class="counter-title">
-                                            <strong>Happy Clients</strong> from all around the world received extremely creative designs.
-                                        </div>
-                                    </div>
-                                </div><!-- /.col-md-4 -->
-                            </div><!-- /.row -->
-                        </div>
-                    </div><!-- /.col-md-6 -->
-
-                    <div class="col-md-6">
-                        <div class="quick-form">
-                            <h3>Request a quick quote</h3>
-                            <p>Please tell us about your business. A HnK representative will walk you through our service options.</p>
-                            <form id="contactform" method="post" action="">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <p><input name="author" type="text" value="" placeholder="Your Name" required="required"></p>
-                                        <p><input id="email" name="email" type="email" value="" placeholder="Your Email" required="required"></p>
-                                        <select class="control-select">
-                                            <option>Interior</option>
-                                            <option>Decoration</option>
-                                            <option>Funiture</option>
-                                            <option>Home Building</option>
-                                        </select>
-                                    </div><!-- /.col-md-6 -->
-
-                                    <div class="col-md-6">
-                                        <p><input id="subject" name="subject" type="text" value="" placeholder="Subject" required="required"></p>
-                                        <p><textarea name="comment" placeholder="Message" required="required"></textarea></p>
-                                        <p class="form-submit"><input name="submit" type="submit" id="submit" class="submit" value="Send Message">
-                                        </p>
-                                    </div><!-- /.col-md-6 -->
-                                </div><!-- /.row -->
-                            </form>
-                        </div><!-- /.quick-form -->
-                    </div><!-- /.col-md-6 -->
-                </div><!-- /.row -->
-            </div><!-- ./container -->
-        </section>
 
         <div class="content-bottom-widgets">
             <div class="container">
@@ -774,7 +700,7 @@
 
                     <div class="col-md-8">
                         <div class="subscrbe-form">
-                            <p><strong>Pe-Mic Consulting</strong> is an Architectural firm located in Lagos, Nigeria that is passionate about completing your incomplete world by through unique architectural design.</p>
+                            <p><strong>Pe-Mic Consulting</strong> ...Completing your incomplete world by our architectural design.</p>
                         </div><!-- /.widget_search -->
                     </div><!-- /.col-md-8 -->
                 </div><!-- /.row -->
@@ -816,7 +742,7 @@
                               <p>
                                 <strong>Mobile 1: </strong>+234806 259 1996<br>
                                 <!-- <strong>Mobile 2:</strong>+234805 766 7909<br> -->
-                                <strong>E-mail: </strong><a href="mailto:ademolababalola0909@yahoo.com ">ademolababalola0909@yahoo.com </a>
+                                <strong>E-mail: </strong><a href="mailto:pemicconsulting@gmail.com ">pemicconsulting@gmail.com </a>
                               </p>
                             </div>
                           </div><!-- /.widget_text -->
