--- a/services.html
+++ b/services.html
@@ -234,7 +234,7 @@
                                     <a href="services-architectural-planning.html"><img src="images/services/pemic-service-architecture.jpg" alt="images"></a>
                                 </div>
                                 <div class="box-content">
-                                    <p class="box-desc">Our professional architectural system is designed to cater our client’s need in order to achieve their requirement based on their budget why delivery timeless designs.</p>
+                                    <p class="box-desc">Our professional architectural system is designed to cater for our client’s need in order to achieve their requirement based on their budget and delivery timelines.</p>
                                     <div class="flat-button">
                                         <a href="services-architectural-planning.html">Read More</a>
                                     </div>
@@ -272,7 +272,7 @@
                                     <a href="services-landscape-design.html"><img src="images/services/pemic-service-construction.jpg" alt="images"></a>
                                 </div>
                                 <div class="box-content">
-                                    <p class="box-desc">Pe-Mic Consulting ensures that industrial standards and requirements are met. We also best practices are employed in safety and build environments for our workers too</p>
+                                    <p class="box-desc">Pe-Mic Consulting ensures that industrial standards and requirements are met. Also, we consider safety environment for our construction sites with well experienced professionals.</p>
                                     <div class="flat-button">
                                         <a href="services-landscape-design.html">Read More</a>
                                     </div>
@@ -300,7 +300,7 @@
 
                     <div class="col-md-8">
                         <div class="subscrbe-form">
-                            <p><strong>Pe-Mic Consulting</strong> is an Architectural firm located in Lagos, Nigeria that is passionate about completing your incomplete world by through unique architectural design.</p>
+                            <p><strong>Pe-Mic Consulting</strong> ...Completing your incomplete world by our architectural design.</p>
                         </div><!-- /.widget_search -->
                     </div><!-- /.col-md-8 -->
                 </div><!-- /.row -->
@@ -342,7 +342,7 @@
                               <p>
                                 <strong>Mobile 1: </strong>+234806 259 1996<br>
                                 <!-- <strong>Mobile 2:</strong>+234805 766 7909<br> -->
-                                <strong>E-mail: </strong><a href="mailto:ademolababalola0909@yahoo.com ">ademolababalola0909@yahoo.com </a>
+                                <strong>E-mail: </strong><a href="mailto:pemicconsulting@gmail.com ">pemicconsulting@gmail.com </a>
                               </p>
                             </div>
                           </div><!-- /.widget_text -->
