Services: archi, interior, constrution design almost complete

--- a/services.html
+++ b/services.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <!--[if IE 8 ]><html class="ie" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"><!--<![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US">
+<!--<![endif]-->
 
 <head>
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
     <title>Pe&dash;Mic Consulting | An Architectural Firm based in Lagos, Nigeria </title>
-  	<meta name="viewport" content="width=device-width, initial-scale=1">
-  	<meta name="description" content="Pe&dash;Mic Consulting is an Architectural firm that completes your incomplete world by our architectural design." />
-  	<meta name="keywords" content="pe mic consulting, pe-mic consulting, pe-mic, pe mic, babalola ademola michael, consultancy, project management, architect in lagos, architectural firm in lagos, architectural firm in nigeria, architectural firm in ikeja, architectural firm in victoria island, architectural company in lagos, architectural design, construction company in nigeria, construction industry in lagos, drawing, interior designs, lagos, ikeja, victoria island " />
-  	<meta name="author" content="pemicconsulting.com" />
-  	<meta name="robot" content="index,follow">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Pe&dash;Mic Consulting is an Architectural firm that completes your incomplete world by our architectural design."
+    />
+    <meta name="keywords" content="pe mic consulting, pe-mic consulting, pe-mic, pe mic, babalola ademola michael, consultancy, project management, architect in lagos, architectural firm in lagos, architectural firm in nigeria, architectural firm in ikeja, architectural firm in victoria island, architectural company in lagos, architectural design, construction company in nigeria, construction industry in lagos, drawing, interior designs, lagos, ikeja, victoria island "
+    />
+    <meta name="author" content="pemicconsulting.com" />
+    <meta name="robot" content="index,follow">
     <meta name="copyright" content="pemicconsulting.com all rights reserved.">
     <meta name="language" content="en">
 
     <!-- Facebook and Twitter integration -->
-  	<meta property="og:title" content=""/>
-  	<meta property="og:image" content=""/>
-  	<meta property="og:url" content=""/>
-  	<meta property="og:site_name" content=""/>
-  	<meta property="og:description" content=""/>
-  	<meta name="twitter:title" content="" />
-  	<meta name="twitter:image" content="" />
-  	<meta name="twitter:url" content="" />
-  	<meta name="twitter:card" content="" />
+    <meta property="og:title" content="" />
+    <meta property="og:image" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:site_name" content="" />
+    <meta property="og:description" content="" />
+    <meta name="twitter:title" content="" />
+    <meta name="twitter:image" content="" />
+    <meta name="twitter:url" content="" />
+    <meta name="twitter:card" content="" />
 
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- Bootstrap  -->
-    <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.css" >
+    <link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.css">
 
     <!-- Theme Style -->
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
@@ -38,7 +42,7 @@
     <!-- Responsive -->
     <link rel="stylesheet" type="text/css" href="stylesheets/responsive.css">
 
-	<!-- Animation Style -->
+    <!-- Animation Style -->
     <link rel="stylesheet" type="text/css" href="stylesheets/animate.css">
 
     <!-- Favicon and touch icons  -->
@@ -72,18 +76,31 @@
                     <div class="col-md-6">
                         <div class="top-navigator">
                             <ul>
-                                <li><a href="#">About</a></li>
-                                <li class="service"><a href="#">Services</a>
+                                <li>
+                                    <a href="about.html">About</a>
+                                </li>
+                                <li class="service">
+                                    <a href="services.html">Services</a>
                                     <ul>
-                                        <li><a href="services-architectural-planning.html">Architectural Design</a></li>
-                                        <li><a href="services-interior-design.html">Interior Design</a></li>
-                                        <li><a href="services-landscape-design.html">Construction</a></li>
+                                        <li>
+                                            <a href="services-architectural-planning.html">Architectural Design</a>
+                                        </li>
+                                        <li>
+                                            <a href="services-interior-design.html">Interior Design</a>
+                                        </li>
+                                        <li>
+                                            <a href="services-construction.html">Construction</a>
+                                        </li>
                                     </ul>
                                 </li>
-                                <li><a href="#">Contact</a></li>
+                                <li>
+                                    <a href="contact.html">Contact</a>
+                                </li>
                             </ul>
-                        </div><!-- /.top-navigator -->
-                    </div><!-- /.col-md-6 -->
+                        </div>
+                        <!-- /.top-navigator -->
+                    </div>
+                    <!-- /.col-md-6 -->
                 </div><!-- /.row -->
             </div><!-- /.container -->
         </div><!-- /.top -->
@@ -254,7 +271,7 @@
                                 <div class="box-content">
                                     <p class="box-desc">Our eye for details results into super finishes which is a result of our exposure and good understanding of necessary equipment to use for client satisfaction.</p>
                                     <div class="flat-button">
-                                        <a href="services-decoration-furniture.html">Read More</a>
+                                        <a href="services-interior-design.html">Read More</a>
                                     </div>
                                 </div>
                             </div>
@@ -273,7 +290,7 @@
                                 <div class="box-content">
                                     <p class="box-desc">Pe-Mic Consulting ensures that industrial standards and requirements are met. Also, we consider safety environment for our construction sites with well experienced professionals.</p>
                                     <div class="flat-button">
-                                        <a href="services-landscape-design.html">Read More</a>
+                                        <a href="services-construction.html">Read More</a>
                                     </div>
                                 </div>
                             </div>
