--- a/index.html
+++ b/index.html
@@ -66,21 +66,26 @@
                     <div class="col-md-6">
                         <div class="flat-address">
                             <ul>
+                                <li class="address">
+                                    4 Yakubu Street, Ketu Ikosi, Lagos, Nigeria &nbsp; | &nbsp; <strong>Mobile: </strong>+234806 259 1996
+                                </li>
                             </ul>
-                        </div><!-- /.flat-address -->
-                    </div><!-- /.col-md-6 -->
+                        </div>
+                        <!-- /.flat-address -->
+                    </div>
+                    <!-- /.col-md-6 -->
                     <div class="col-md-6">
                         <div class="top-navigator">
                             <ul>
-                                <li><a href="#">About</a></li>
-                                <li class="service"><a href="#">Services</a>
+                                <li><a href="about.html">About</a></li>
+                                <li class="service"><a href="services.html">Services</a>
                                     <ul>
                                         <li><a href="services-architectural-planning.html">Architectural Design</a></li>
                                         <li><a href="services-interior-design.html">Interior Design</a></li>
-                                        <li><a href="services-landscape-design.html">Construction</a></li>
+                                        <li><a href="services-construction.html">Construction</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div><!-- /.top-navigator -->
                     </div><!-- /.col-md-6 -->
@@ -93,13 +98,13 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div id="logo" class="logo">
-                            <a href="index-2.html" rel="home">
+                            <a href="/" rel="home">
                                 <img src="images/pemic-logo.jpg" alt="image">
                             </a>
                         </div><!-- /.logo -->
                         <div class="header-widgets">
                             <div id="text-1" class="widget widget_text">
-                              <h1>Pe-Mic Consulting</h1>
+                              <h1> <a href="/">Pe-Mic Consulting</a></h1>
                                 <div class="textwidget">
                                     <div class="info-icon">
                                         <div class="content">
@@ -132,16 +137,19 @@
                                               <img src="images/pemic-logo.jpg" alt="pemic logo image">
                                             </a>
                                         </li>
-                                        <li class="has-children"><a href="about.html">About</a>
-                                          <ul class="submenu">
-                                            <li><a href="meet-the-team.html">Our Team</a></li>
-                                          </ul>
+                                        <li class="has-children">
+                                            <a href="about.html">About</a>
+                                            <ul class="submenu">
+                                                <li>
+                                                    <a href="meet-the-team.html">Our Team</a>
+                                                </li>
+                                            </ul>
                                         </li>
                                         <li class="has-children"><a href="services.html">Services</a>
                                             <ul class="submenu">
                                               <li><a href="services-architectural-planning.html">Architectural Design</a></li>
                                               <li><a href="services-interior-design.html">Interior Design</a></li>
-                                              <li><a href="services-landscape-design.html">Construction</a></li>
+                                              <li><a href="services-construction.html">Construction</a></li>
                                             </ul><!-- /.submenu -->
                                         </li>
                                         <li class="has-mega-menu has-children"><a href="projects-grid-simple.html">Projects</a>
@@ -177,13 +185,12 @@
                                                 </div>
                                             </div><!-- /.mega-menu -->
                                         </li>
-                                        <!-- <li><a href="blog.html">Blog</a></li> -->
                                         <li><a href="contact.html">Contact </a></li>
-                                        <li class="has-children"><a href="#">Extra</a>
+                                        <!-- <li class="has-children"><a href="#">Extra</a>
                                             <ul class="submenu">
                                                 <li><a href="404.html">404 Page</a></li>
                                             </ul>
-                                        </li>
+                                        </li> -->
                                     </ul><!-- /.menu -->
 
                                     <div class="menu-extra">
@@ -288,9 +295,9 @@
                             <div class="box-wrap">
                                 <div class="box-image">
                                     <div class="box-header">
-                                        <h4 class="box-title"><a href="services-landscape-design.html">Construction</a></h4>
+                                        <h4 class="box-title"><a href="services-construction.html">Construction</a></h4>
                                     </div>
-                                    <a href="services-landscape-design.html"><img src="images/imagebox/pemic-construction.jpg" alt="images"></a>
+                                    <a href="services-construction.html"><img src="images/imagebox/pemic-construction.jpg" alt="images"></a>
                                 </div>
                                 <div class="box-content">
                                     <p class="box-desc">Pe-Mic Consulting ensures that industrial standards and requirements are met. Also, we consider safety environment for our construction sites with well experienced professionals. </p>
@@ -606,85 +613,6 @@
             </div><!-- /.container -->
         </section>
 
-        <!-- Flat clients -->
-        <section class="flat-row pad-top0px pad-bottom0px">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="main-text style1">
-                            <h3 class="title">What Our Clients Say?</h3>
-                        </div>
-                    </div><!-- /.col-md-3 -->
-
-                    <div class="col-md-9">
-                        <div class="flat-clients">
-                            <div class="clients-featured">
-                                <img src="images/client/1.png" alt="images">
-                            </div>
-                            <div class="clients-featured">
-                                <img src="images/client/2.png" alt="images">
-                            </div>
-                            <div class="clients-featured">
-                                <img src="images/client/3.png" alt="images">
-                            </div>
-                            <div class="clients-featured">
-                                <img src="images/client/4.png" alt="images">
-                            </div>
-                            <div class="clients-featured">
-                                <img src="images/client/1.png" alt="images">
-                            </div>
-                        </div>
-                    </div><!-- /.col-md-9 -->
-                </div><!-- /.row -->
-            </div><!-- /.container -->
-        </section>
-
-        <!-- Flat testimonial -->
-        <section class="flat-row flat-testimonials" style="background-color: #f5f5f5;">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="flat-testimonial">
-                            <div class="testimonial">
-                                <div class="testimonial-content">
-                                    <p>John Doe and his crew are true craftsmen that produced high-quality work and were easy to work with too. The end result is magnificent and we get comments all of the time, from friends and strangers alike, how beautiful our home is.</p>
-                                </div>
-                                <div class="testimonial-meta">
-                                    <div class="testimonial-image">
-                                        <img src="images/testimonial/1.jpg" alt="images">
-                                    </div>
-                                    <div class="testimonial-author">
-                                        <p class="author-name">Niyi Bankole</p>
-                                    </div>
-                                    <div class="author-info">
-                                        <p>CEO - TVC</p>
-                                    </div>
-                                </div>
-                            </div><!-- /.testimonial -->
-
-                            <div class="testimonial">
-                                <div class="testimonial-content">
-                                    <p>John Doe and his crew are true craftsmen that produced high-quality work and were easy to work with too. The end result is magnificent and we get comments all of the time, from friends and strangers alike, how beautiful our home is.</p>
-                                </div>
-                                <div class="testimonial-meta">
-                                    <div class="testimonial-image">
-                                        <img src="images/testimonial/2.jpg" alt="images">
-                                    </div>
-                                    <div class="testimonial-author">
-                                        <p class="author-name">Mohammed Jubril</p>
-                                    </div>
-                                    <div class="author-info">
-                                        <p>CEO - Suntrust Bank</p>
-                                    </div>
-                                </div>
-                            </div><!-- /.testimonial -->
-                        </div><!-- /.flat-testimonial -->
-                    </div><!-- /.col-md-12 -->
-                </div><!-- /.row -->
-            </div><!-- /.container -->
-        </section>
-
-
         <div class="content-bottom-widgets">
             <div class="container">
                 <div class="row">
@@ -726,7 +654,7 @@
                                 <div class="menu-services-container">
                                   <ul class="menu">
                                       <li class="menu-item"><a href="services-architectural-planning.html">Architectural Design</a></li>
-                                      <li class="menu-item"><a href="services-landscape-design.html">Construction</a></li>
+                                      <li class="menu-item"><a href="services-construction.html">Construction</a></li>
                                       <li class="menu-item"><a href="services-interior-design.html">Interior Design</a></li>
                                   </ul>
                                 </div>
@@ -737,12 +665,14 @@
                           <div class="widget widget_text">
                             <h3 class="widget-title">Contact Us</h3>
                             <div class="textwidget">
-                              <p><strong>No 4, Yakubu Street, off Jimoh Balogun Str., Ketu Ikosi, Lagos, Nigeria</strong></p>
-                              <p>
-                                <strong>Mobile 1: </strong>+234806 259 1996<br>
-                                <!-- <strong>Mobile 2:</strong>+234805 766 7909<br> -->
-                                <strong>E-mail: </strong><a href="mailto:pemicconsulting@gmail.com ">pemicconsulting@gmail.com </a>
-                              </p>
+                                <address>
+                                    <p><strong>No 4, Yakubu Street, off Jimoh Balogun Str., Ketu Ikosi, Lagos, Nigeria</strong></p>
+                                    <p>
+                                      <strong>Mobile: </strong>+234806 259 1996<br>
+                                      <!-- <strong>Mobile 2:</strong>+234805 766 7909<br> -->
+                                      <strong>E-mail: </strong><a href="mailto:pemicconsulting@gmail.com ">pemicconsulting@gmail.com </a>
+                                    </p>
+                                </address>
                             </div>
                           </div><!-- /.widget_text -->
                         </div><!-- /.col-md-3 -->
